Closed Bug 1583204 Opened 6 years ago Closed 6 years ago

No Network ID is available when switching between WiFi and Lan networks

Categories

(Core :: Networking, defect, P1)

71 Branch
Desktop
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla71
Tracking Status
firefox70 --- verified
firefox71 --- verified

People

(Reporter: bsurd, Assigned: michal)

Details

(Whiteboard: [necko-triaged])

Attachments

(2 files)

Affected versions:

  • Firefox Release 70.0b8 and above

Affected Platforms:

  • Linux Ubuntu 19.04
  • Linux Ubuntu 18.04

Prerequisites:

  • You are connected to a Lan network.

Steps to reproduce:

  1. Open Firefox and go to about:networking#networkid.
  2. Switch from a Lan to a WiFi network.
  3. Observe the Network ID field.

Expected result:

  • The Network ID has a value displayed.

Actual result:

  • There is no value in the Network ID field after switching between networks.

Notes:

  • The same issue is reproducible if switching from a WiFi network to a Lan network.
  • The Network ID field updates when switching between between different WiFi networks.
  • The Network ID is displayed after restarting the browser.
Assignee: nobody → michal.novotny
Priority: -- → P1
Whiteboard: [necko-triaged]

I cannot reproduce it on Fedora and I don't have access to Ubuntu now. Bogdan, can you please provide a log? Use MOZ_LOG=NetlinkService:5,nsNetworkLinkService:5

Also, please try to reproduce the bug with latest nightly. I'm curious whether changes in bug 1561944 could fix it. Thanks.

Flags: needinfo?(bogdan.surd)

There can be multiple records for the same neighbor with different interface index when the computer is connected to the same network via multiple interfaces, e.g. LAN and WiFi. This patch adds interface index to the key, so when some interface goes down it doesn't remove records belonging to a different interface.

The patch also changes slightly logging to make the output easier to read.

Flags: needinfo?(bogdan.surd)
Pushed by mnovotny@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fab5c0a9f011 No Network ID is available when switching between WiFi and Lan networks, r=valentin
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71

Is this something that should be considered for Beta uplift or can this ride Fx71 to release?

Flags: needinfo?(michal.novotny)

Comment on attachment 9095039 [details]
Bug 1583204 - No Network ID is available when switching between WiFi and Lan networks, r?valentin

Beta/Release Uplift Approval Request

  • User impact if declined: No network ID on Linux when switching between LAN and WiFi on the same network.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple change that isolates records by interface.
  • String changes made/needed: none
Flags: needinfo?(michal.novotny)
Attachment #9095039 - Flags: approval-mozilla-beta?

Is this a recent regression or a longstanding problem?

Flags: needinfo?(michal.novotny)

I'd prefer to let this ride with 71 since there isn't a lot of time for testing/verification.

(In reply to Liz Henry (:lizzard) from comment #8)

Is this a recent regression or a longstanding problem?

It's a regression caused by bug 1567616. The fix is quite simple and was verified by QA, so it shouldn't be risky.

Flags: needinfo?(michal.novotny)

Comment on attachment 9095039 [details]
Bug 1583204 - No Network ID is available when switching between WiFi and Lan networks, r?valentin

OK, let's fix this before it hits release.

Attachment #9095039 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

I didn't see the QA verification, did I miss something or did you do that over email?

Flags: needinfo?(michal.novotny)

I didn't see the QA verification, did I miss somethi

Flags: qe-verify+

(In reply to Liz Henry (:lizzard) from comment #12)

I didn't see the QA verification, did I miss something or did you do that over email?

Yes, it was a private communication via slack. I wasn't able to reproduce it, so Bogdan provided the logs and was also testing the patches.

Flags: needinfo?(michal.novotny)
QA Whiteboard: [qa-triaged]

As Michal mentioned in comment 14 we discussed via slack. This has been verified. Marking it here as well.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: