Bug 1583204 - No Network ID is available when switching between WiFi and Lan networks, r=valentin

There can be multiple records for the same neighbor with different interface index when the computer is connected to the same network via multiple interfaces, e.g. LAN and WiFi. This patch adds interface index to the key, so when some interface goes down it doesn't remove records belonging to a different interface.

Differential Revision: https://phabricator.services.mozilla.com/D47017